added images and cleaned up code errors

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
 
         <meta charset="utf-8">
-        <title>Travel Trivia Quiz</title>
+        <title>Movie Trivia Quiz</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="assets/css/styles.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
         <script type = "text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
     </head>
@@ -16,7 +16,7 @@
     <div class="jumbotron">
       <div class="container">
         <div class="row">
-          <h1 class="text-center">Travel Trivia Quiz</h1>
+          <h1 class="text-center">Movie Trivia Quiz</h1>
           <div class="mainArea col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
           </div>
         </div>
@@ -26,6 +26,6 @@
     <div class="container">
 
     </div> 
-        <script src="app.js"></script>
+        <script src="assets/javascript/app.js"></script>
     </body>
   </html>
